updata net